@TODO: Issue #36025 must be solved and this note here adapted, otherwise the
removal will be reverted.

* Removed TypoScript option noBlur

The ancient noBlur TypoScript setting for old Browsers (Internet Explorer <= 5.5)
was removed without alternative. The setting has no effect anymore and can be
removed from custom TypoScript objects, especially MENU.

===============================================================================
Changes and Improvements
===============================================================================

This will list all changes and improvements between TYPO3 4.7 and 6.0. For
technical details see ChangeLog included in the typo3_src package.

-------------------------------------------------------------------------------
General
-------------------------------------------------------------------------------

* Extbase and fluid always loaded

The core extensions 'extbase' and 'fluid' are used in core classes like t3lib
and in several important core extensions. Extbase and fluid are now required
extensions and always loaded.

Other General Improvements
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Security
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Backend
-------------------------------------------------------------------------------

...

htmlArea RTE
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Other Improvements to the Backend
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Administration / Customization